Fix scrollbar visible

--- a/client/src/global.css
+++ b/client/src/global.css
@@ -1,3 +1,7 @@
 [contenteditable] {
 	user-select: text;
 }
+
+body ::-webkit-scrollbar {
+	display: none;
+}
